app/assets/stylesheets/client.css
.client-container {
  font-family: 'Prompt', sans-serif;
  width: 100vw;
  height: 100vh;
  display: grid;
  grid-template-columns: 400px auto;
  grid-template-rows: 38px auto;
  grid-template-areas: 
    "header header"
    "channels messages";
  overflow: auto;
}

.search-bar-container {
  grid-area: header;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: rgb(24, 24, 24);
  border-bottom: .5px solid rgba(179, 179, 179, 1);
  box-shadow: 0 .5px 0 0 rgba(40,40,40, 1);
}

.channel-container {
  grid-area: channels;
  display: flex;
  flex-direction: column;
  background-color: rgb(18, 18, 18);
}

.username-display:hover {
  background-color: rgba(179, 179, 179, .5);
  color: #ffffff;
}

.username-display:hover .new-message-button {
  background-color: #ffffff;
}

.conversation-container {
  grid-area: messages;
  width: auto;
}

.channels-container > div {
  box-shadow: 0 .5px 0 0 rgba(179, 179, 179, 1);
  color:rgb(179, 179, 179);
  padding-bottom: 15px;
}

.conversation-section li {
  padding: 1px 15px;
}

.conversation-section lh {
  padding: 15px 15px;
}

.conversation-section li:hover {
  /* box-shadow: 0 .5px 0 0 rgba(2,15,7,0.4); */
  background-color: rgba(179, 179, 179, .5);
}

.username-display {
  display: flex;
  justify-content: space-between;
  height: 65px;
  align-items: center;
  padding: 15px;
  
}

.username-display div:first-child {
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-size: 14px;
}

.username-display div:first-child > div {
  padding: 5px 0;
}

.username-display h3{
  font-weight: 900;
  font-size: 20px;
}

lh {
  font-size: 20px;
}

.channels-section-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

/* search section */
.search-bar {
  border-radius: 20px;
}


/* conversation/message */


.hide-side-bar {
  display: none;
}

.conversation-wrapper-grid {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: calc(100vh - 158px) 120px;
  grid-template-areas: 
    "messages-container side-bar"
    "message-form side-bar" ;
  color: rgb(179, 179, 179);
  background-color: rgb(40, 40, 40) ;
}

.messages-window-grid-area {
  grid-area: messages-container;
  overflow-x: hidden;
  width: 100%;
}

.messages-window-grid-area:hover::-webkit-scrollbar {
  width: 7px;
  background-color: rgba(179, 179, 179, .5);
}

.messages-window-grid-area:hover::-webkit-scrollbar-thumb {
  border-radius: 15%;
  background-color: rgba(253, 251, 251, 0.5);
}

.side-bar-grid-area {
  grid-area: side-bar;
  width: 400px;
}

.message-form-grid-area {
  grid-area: message-form;
  z-index: 6;
  border-top: 1px solid #ffffff;
  height: fit-content;
}

.message-header {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  box-shadow: 0 .5px 0 0 rgba(2,15,7,0.4);
  border-bottom: .5px solid rgba(179,179,179,.5);
  height: 65px;

}

.message-header > div {
  padding: 0 25px;
}

.message-container {
  width: 100%;
  padding: 25px 5px;
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  border-bottom: .5px solid rgba(179,179,179,.5);
  box-shadow: 0 .5px 0 0 rgba(2,15,7,0.4);
  position: relative;
}

.avatar-img {
  width: 40px;
  height: 40px;
  border: 2px solid #191414;
  border-radius: 7px;
}

.avatar-span {
  margin: 0px 8px 8px 0px;
}

.message-container span {
  display: inline-block;
  padding: 2px;
  font-weight: 800;

}

.message-and-options-container {
  display: flex;
  justify-content: space-between;
  padding: 2px 10px;
  margin: 2px 10px;
  font-weight: 400;
  font-size: 15px;

}

#message-options-button {
  position: relative;
  opacity: 30%;
  font-size: large;
}

#message-options-button:hover {
  opacity: 100%;
}

.message-container:hover > .message-and-options-container .message-options{
  display: flex;
  align-content: center;
  justify-content: center;
}

.message-options {
  position: absolute;
  display: none;
  width: 88px;
  height: auto;
  top: 12px;
  right: 32px;
  background-color: #191414;
  color: white;
  border-radius: 7px;
  font-family: 'Prompt', sans-serif;
  z-index: 10;
}

.message-options i {
  height: 100%;
  width: 100%;
  text-align: center;
  align-self: center;
  padding: 8px 0;
}

.message-options > span {
  height: 100%;
  width: 100%;
}

.message-options > i:hover {
  background-color: white;
  color: #191414;
  height: 100%;
  width: 100%;
  border-radius: 7px;
  position: relative;
  cursor: pointer;
}

.message-container:hover {
  background-color: rgba(179,179,179,.5);
  color: #ffffff
}

.message-form-container {
  margin: 10px;
  height: 90%;
  padding-bottom: 8px;
}

.message-form-container form {
  display: flex;
  justify-content: space-between;
  width: 95%;
  background-color: #ffffff;
  border-radius: 7px;
  border: 1px solid black;
  padding: 10px;
  margin: 0 auto;
}

.text-area-wrapper {
  width: 100%;
  background-color: transparent;
  height: 100%;
}

.message-form-text-area {
  outline: none;
  resize: none;
  border: none;
  width: 100%;
  height: 100%;
  box-sizing: content-box;
  background-color: transparent;
  color: #191414;
  font-size: 14px;
  font-weight: 600;
}

.send-button svg {
  width: 25px;
  height: 25px;
}

::-webkit-scrollbar {
    width: 7px;
    background-color: transparent;
}

/* sidebar */

.sidebar-header {
  display: flex;
  justify-content: space-between;
}

.rotate svg{
  transform: rotate(90deg);

}

.sidebar-header svg {
  width: 20px;
  height: 20px;
  fill: rgba(179, 179, 179, 1);
}

.playlist {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin: 20px 0;
  
}

.playlist p {
  text-align: justify;
  margin: 0 20px;
  font-size: 12px;
  font-weight: 500;
  line-height: 1.5;
  border: 1px solid rgba(179, 179, 179, .2);
  background-color: rgba(24, 24, 24, .2);
  padding: 8px;
}

.playlist p > span {
  font-weight: bold;
  color: #ffffff
}

.playlist iframe {
  margin-bottom: 12px;
}

.about-section {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 0;
}

.about-section:hover {
  color: white;
}

.about-section span {
  font-size: 15px;
}

.about-section span:first-child {
  font-weight: 900;
  font-size: 15px;
}

.about-section i {
  color: rgb(179, 179, 179);
}

.about-section:hover i {
  color: #ffffff;
}

.about-section button:hover {
  background-color: rgba(179, 179, 179, .5);
  box-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
  border: rgba(255, 255, 255, 0.5);
}

.members-section > div {
  display: flex;
  align-items: center;
  padding: 10px 0;
}

.members-section img { 
  width: 20px;
  height: 20px;
}

.members-section span {
  padding: 0 10px;
}

.channel-list-item {
  border-bottom: 1px solid rgba(179, 179, 179, .5);
  width: auto;
  display: flex;
  justify-content: space-between;
  align-content: center;
  align-items: center;
}

.channel-list-item > div:first-child {
  display: flex;
  justify-content: space-between;
  align-content: flex-start;
  flex-direction: column;
}

.channel-list-item span {
  color: rgba(40,40,40, 0.5);
  font-size: 12px;
  padding: 8px 0px ;
}


.channels-list .message-header, .channel-list-item {
   padding: 16px 25px;
   width: auto;
}

.tooltip {
  visibility: hidden;
  width: auto;
  background-color: rgb(18, 18, 18);
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 8px;
  position: absolute;
  z-index: 1;
  top: -62%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-family: 'Prompt', sans-serif;
}

.message-options > i:hover > .tooltip {
  visibility: visible;
}

.no-spotify-login-warning {
  width: 100%;
  height: 25%;
}

.no-spotify-login-warning > div {
  width: 600px;
  margin: 4px auto;
  border-radius: 7px;
  text-align: center;
  color: rgba(255, 0, 0, 0.8);
  padding: 4px;
  background-color: rgb(18, 18, 18);
  font-weight: 400;
}

.edit-message-container {
  padding: 4px 8px;
}

.edit-message-container > .text-area-wrapper {
  background-color: #ffffff;
  border: 1px solid #121212; 
  border-radius: 7px;
  height: 52px;
  margin-bottom: 8px;
}

.edit-message-container textarea {
  margin-left: 4px;
}

textarea {  
   font-family: 'Prompt', sans-serif; 
   font-size: 24px;   
}

.sidebar-header:hover {
  cursor: pointer;
}

.inner-search {
  position: relative;
  display: flex;
  justify-content: flex-end;
  width: 100%;
  padding: 0 8px;
  font-size: 12px;
}

.inner-search .logo {
  position: absolute;
  right: 50%;
  top: -20%;
  transform: translate(88%, -50%);
}

